# fast-api-mongo

./: .env  .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.py
